--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Gameifer</title>
     <meta charset="UTF-8" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <meta
       name="description"
       content="Converts a Scratch project to HTML/JavaScript  
