--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
    <a href="Manaphy.html">View example</a>
-   <a href="mailto:tickets@gameifier.p.tawk.email">email Gameifer</a>
+   <a href="mailto:tickets@gameifier.p.tawk.email">Email Gameifer</a>
     <!-- no-offline -->
     <link rel="stylesheet" type="text/css" href="../../sheep3.css" />
     <script src="../../sheep3.js" charset="utf-8"></script>
